--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,13 @@
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+# =========================
+# Operating System Files
+# =========================
 
-# Precompiled Headers
-*.gch
-*.pch
+# OSX
+# =========================
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+.DS_Store
+.AppleDouble
+.LSOverride
+.browse
+.vscode
+.VC.db
